allele code load fallback